agora so falta terminar o modelo?

--- a/MNIST_CNN.ipynb
+++ b/MNIST_CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -229,154 +229,154 @@
      "text": [
       "ON STEP: 0\n",
       "ACCURACY: \n",
-      "0.2263\n",
+      "0.1199\n",
       "ON STEP: 100\n",
       "ACCURACY: \n",
-      "0.9494\n",
+      "0.9427\n",
       "ON STEP: 200\n",
       "ACCURACY: \n",
-      "0.9615\n",
+      "0.959\n",
       "ON STEP: 300\n",
       "ACCURACY: \n",
-      "0.9678\n",
+      "0.9719\n",
       "ON STEP: 400\n",
       "ACCURACY: \n",
-      "0.973\n",
+      "0.9683\n",
       "ON STEP: 500\n",
       "ACCURACY: \n",
-      "0.9773\n",
+      "0.9768\n",
       "ON STEP: 600\n",
       "ACCURACY: \n",
-      "0.978\n",
+      "0.9787\n",
       "ON STEP: 700\n",
       "ACCURACY: \n",
-      "0.9836\n",
+      "0.9756\n",
       "ON STEP: 800\n",
       "ACCURACY: \n",
-      "0.9817\n",
+      "0.9837\n",
       "ON STEP: 900\n",
       "ACCURACY: \n",
-      "0.9835\n",
+      "0.9809\n",
       "ON STEP: 1000\n",
       "ACCURACY: \n",
-      "0.9842\n",
+      "0.9789\n",
       "ON STEP: 1100\n",
       "ACCURACY: \n",
-      "0.9869\n",
+      "0.9847\n",
       "ON STEP: 1200\n",
       "ACCURACY: \n",
-      "0.9889\n",
+      "0.9842\n",
       "ON STEP: 1300\n",
       "ACCURACY: \n",
-      "0.9854\n",
+      "0.9821\n",
       "ON STEP: 1400\n",
       "ACCURACY: \n",
-      "0.9813\n",
+      "0.9857\n",
       "ON STEP: 1500\n",
       "ACCURACY: \n",
-      "0.9871\n",
+      "0.988\n",
       "ON STEP: 1600\n",
       "ACCURACY: \n",
-      "0.9889\n",
+      "0.986\n",
       "ON STEP: 1700\n",
       "ACCURACY: \n",
-      "0.9856\n",
+      "0.9884\n",
       "ON STEP: 1800\n",
       "ACCURACY: \n",
-      "0.9859\n",
+      "0.9885\n",
       "ON STEP: 1900\n",
       "ACCURACY: \n",
-      "0.9868\n",
+      "0.9862\n",
       "ON STEP: 2000\n",
       "ACCURACY: \n",
-      "0.9865\n",
+      "0.9873\n",
       "ON STEP: 2100\n",
       "ACCURACY: \n",
-      "0.9868\n",
+      "0.9881\n",
       "ON STEP: 2200\n",
       "ACCURACY: \n",
-      "0.9896\n",
+      "0.9885\n",
       "ON STEP: 2300\n",
       "ACCURACY: \n",
-      "0.9896\n",
+      "0.9877\n",
       "ON STEP: 2400\n",
       "ACCURACY: \n",
-      "0.989\n",
+      "0.9899\n",
       "ON STEP: 2500\n",
       "ACCURACY: \n",
-      "0.9905\n",
+      "0.9876\n",
       "ON STEP: 2600\n",
       "ACCURACY: \n",
-      "0.9875\n",
+      "0.9898\n",
       "ON STEP: 2700\n",
       "ACCURACY: \n",
-      "0.9881\n",
+      "0.9867\n",
       "ON STEP: 2800\n",
       "ACCURACY: \n",
-      "0.9869\n",
+      "0.9891\n",
       "ON STEP: 2900\n",
       "ACCURACY: \n",
-      "0.9889\n",
+      "0.9887\n",
       "ON STEP: 3000\n",
       "ACCURACY: \n",
-      "0.9898\n",
+      "0.9877\n",
       "ON STEP: 3100\n",
       "ACCURACY: \n",
-      "0.9881\n",
+      "0.9885\n",
       "ON STEP: 3200\n",
       "ACCURACY: \n",
-      "0.99\n",
+      "0.9899\n",
       "ON STEP: 3300\n",
       "ACCURACY: \n",
-      "0.987\n",
+      "0.9884\n",
       "ON STEP: 3400\n",
       "ACCURACY: \n",
-      "0.9903\n",
+      "0.9894\n",
       "ON STEP: 3500\n",
       "ACCURACY: \n",
-      "0.9893\n",
+      "0.9897\n",
       "ON STEP: 3600\n",
       "ACCURACY: \n",
-      "0.9893\n",
+      "0.9896\n",
       "ON STEP: 3700\n",
       "ACCURACY: \n",
-      "0.9908\n",
+      "0.9921\n",
       "ON STEP: 3800\n",
       "ACCURACY: \n",
-      "0.9902\n",
+      "0.9907\n",
       "ON STEP: 3900\n",
       "ACCURACY: \n",
-      "0.9908\n",
+      "0.9877\n",
       "ON STEP: 4000\n",
       "ACCURACY: \n",
-      "0.9898\n",
+      "0.9871\n",
       "ON STEP: 4100\n",
       "ACCURACY: \n",
-      "0.9887\n",
+      "0.9884\n",
       "ON STEP: 4200\n",
       "ACCURACY: \n",
-      "0.9898\n",
+      "0.9901\n",
       "ON STEP: 4300\n",
       "ACCURACY: \n",
-      "0.9884\n",
+      "0.9889\n",
       "ON STEP: 4400\n",
       "ACCURACY: \n",
-      "0.9894\n",
+      "0.9909\n",
       "ON STEP: 4500\n",
       "ACCURACY: \n",
-      "0.9909\n",
+      "0.9903\n",
       "ON STEP: 4600\n",
       "ACCURACY: \n",
-      "0.9904\n",
+      "0.9896\n",
       "ON STEP: 4700\n",
       "ACCURACY: \n",
-      "0.9904\n",
+      "0.9892\n",
       "ON STEP: 4800\n",
       "ACCURACY: \n",
-      "0.9906\n",
+      "0.99\n",
       "ON STEP: 4900\n",
       "ACCURACY: \n",
-      "0.99\n"
+      "0.9906\n"
      ]
     }
    ],
@@ -399,6 +399,66 @@
     "            \n",
     "            print(sess.run(acc, feed_dict={x:mnist.test.images, y_true:mnist.test.labels, hold_prob:1.0}))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " ..., \n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(batch_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 784)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
