--- a/MNIST_CNN.ipynb
+++ b/MNIST_CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -229,154 +229,154 @@
      "text": [
       "ON STEP: 0\n",
       "ACCURACY: \n",
-      "0.1199\n",
+      "0.2082\n",
       "ON STEP: 100\n",
       "ACCURACY: \n",
-      "0.9427\n",
+      "0.9484\n",
       "ON STEP: 200\n",
       "ACCURACY: \n",
-      "0.959\n",
+      "0.9679\n",
       "ON STEP: 300\n",
       "ACCURACY: \n",
-      "0.9719\n",
+      "0.9693\n",
       "ON STEP: 400\n",
       "ACCURACY: \n",
-      "0.9683\n",
+      "0.9723\n",
       "ON STEP: 500\n",
       "ACCURACY: \n",
-      "0.9768\n",
+      "0.9688\n",
       "ON STEP: 600\n",
       "ACCURACY: \n",
-      "0.9787\n",
+      "0.9776\n",
       "ON STEP: 700\n",
       "ACCURACY: \n",
-      "0.9756\n",
+      "0.9826\n",
       "ON STEP: 800\n",
       "ACCURACY: \n",
-      "0.9837\n",
+      "0.9846\n",
       "ON STEP: 900\n",
       "ACCURACY: \n",
-      "0.9809\n",
+      "0.9804\n",
       "ON STEP: 1000\n",
       "ACCURACY: \n",
-      "0.9789\n",
+      "0.9832\n",
       "ON STEP: 1100\n",
       "ACCURACY: \n",
-      "0.9847\n",
+      "0.9797\n",
       "ON STEP: 1200\n",
       "ACCURACY: \n",
-      "0.9842\n",
+      "0.9871\n",
       "ON STEP: 1300\n",
       "ACCURACY: \n",
-      "0.9821\n",
+      "0.9843\n",
       "ON STEP: 1400\n",
       "ACCURACY: \n",
-      "0.9857\n",
+      "0.9868\n",
       "ON STEP: 1500\n",
       "ACCURACY: \n",
       "0.988\n",
       "ON STEP: 1600\n",
       "ACCURACY: \n",
-      "0.986\n",
+      "0.9844\n",
       "ON STEP: 1700\n",
       "ACCURACY: \n",
-      "0.9884\n",
+      "0.9876\n",
       "ON STEP: 1800\n",
       "ACCURACY: \n",
-      "0.9885\n",
+      "0.9868\n",
       "ON STEP: 1900\n",
       "ACCURACY: \n",
-      "0.9862\n",
+      "0.987\n",
       "ON STEP: 2000\n",
       "ACCURACY: \n",
-      "0.9873\n",
+      "0.987\n",
       "ON STEP: 2100\n",
       "ACCURACY: \n",
-      "0.9881\n",
+      "0.9867\n",
       "ON STEP: 2200\n",
       "ACCURACY: \n",
-      "0.9885\n",
+      "0.9846\n",
       "ON STEP: 2300\n",
       "ACCURACY: \n",
-      "0.9877\n",
+      "0.9861\n",
       "ON STEP: 2400\n",
       "ACCURACY: \n",
-      "0.9899\n",
+      "0.9874\n",
       "ON STEP: 2500\n",
       "ACCURACY: \n",
-      "0.9876\n",
+      "0.9893\n",
       "ON STEP: 2600\n",
       "ACCURACY: \n",
-      "0.9898\n",
+      "0.9879\n",
       "ON STEP: 2700\n",
       "ACCURACY: \n",
-      "0.9867\n",
+      "0.9885\n",
       "ON STEP: 2800\n",
       "ACCURACY: \n",
-      "0.9891\n",
+      "0.9895\n",
       "ON STEP: 2900\n",
       "ACCURACY: \n",
-      "0.9887\n",
+      "0.9892\n",
       "ON STEP: 3000\n",
       "ACCURACY: \n",
-      "0.9877\n",
+      "0.9886\n",
       "ON STEP: 3100\n",
       "ACCURACY: \n",
-      "0.9885\n",
+      "0.9886\n",
       "ON STEP: 3200\n",
       "ACCURACY: \n",
-      "0.9899\n",
+      "0.9895\n",
       "ON STEP: 3300\n",
       "ACCURACY: \n",
-      "0.9884\n",
+      "0.9895\n",
       "ON STEP: 3400\n",
       "ACCURACY: \n",
-      "0.9894\n",
+      "0.9897\n",
       "ON STEP: 3500\n",
       "ACCURACY: \n",
       "0.9897\n",
       "ON STEP: 3600\n",
       "ACCURACY: \n",
-      "0.9896\n",
+      "0.9881\n",
       "ON STEP: 3700\n",
       "ACCURACY: \n",
-      "0.9921\n",
+      "0.9895\n",
       "ON STEP: 3800\n",
       "ACCURACY: \n",
-      "0.9907\n",
+      "0.9905\n",
       "ON STEP: 3900\n",
       "ACCURACY: \n",
-      "0.9877\n",
+      "0.9904\n",
       "ON STEP: 4000\n",
       "ACCURACY: \n",
-      "0.9871\n",
+      "0.9886\n",
       "ON STEP: 4100\n",
       "ACCURACY: \n",
-      "0.9884\n",
+      "0.9913\n",
       "ON STEP: 4200\n",
       "ACCURACY: \n",
-      "0.9901\n",
+      "0.9909\n",
       "ON STEP: 4300\n",
       "ACCURACY: \n",
-      "0.9889\n",
+      "0.9901\n",
       "ON STEP: 4400\n",
       "ACCURACY: \n",
-      "0.9909\n",
+      "0.9896\n",
       "ON STEP: 4500\n",
       "ACCURACY: \n",
-      "0.9903\n",
+      "0.9897\n",
       "ON STEP: 4600\n",
       "ACCURACY: \n",
-      "0.9896\n",
+      "0.9901\n",
       "ON STEP: 4700\n",
       "ACCURACY: \n",
-      "0.9892\n",
+      "0.9903\n",
       "ON STEP: 4800\n",
       "ACCURACY: \n",
-      "0.99\n",
+      "0.9899\n",
       "ON STEP: 4900\n",
       "ACCURACY: \n",
-      "0.9906\n"
+      "0.9912\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -444,13 +444,33 @@
        "(50, 784)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "batch_x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 784)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnist.test.images.shape"
    ]
   },
   {
